gccida/g2/loop_insn_first_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9005:4: error: expected ';' after expression
rtx v5; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9005:5: error: use of undeclared identifier 'v5'
rtx v5; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9015:1: error: use of undeclared identifier 'v5'
v5 = insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9018:9: error: use of undeclared identifier 'v5'
rtint = v5->fld[0].rtint; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9022:17: error: use of undeclared identifier 'v5'
v8 = *( _WORD *)v5; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9034:1: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9034:6: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9040:7: error: use of undeclared identifier 'v5'
if ( !v5 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/loop.c:9042:6: error: use of undeclared identifier 'v5'
if ( v5 == reference || !rtx ) 
     ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_insn_first_p/src/obj/loop.o] Error 1
